<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_relative_layout"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_relative_layout"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/telefoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone_relative_layout"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/telefoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/notificacoesCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receber_notifica_es" />

        <RadioGroup
            android:id="@+id/notificacoesRadioGroup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/emailRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email" />

            <RadioButton
                android:id="@+id/telefoneRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telefone" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/limparButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/limpar_relative_layout"
        android:onClick="limparFormulario" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar_relative_layout"/>

    </LinearLayout>

</LinearLayout>